# splx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bspline.cpp  bspline.h  main.cpp
include/: bezier.h  bspline.h  curve.h  spline.h
include/splx/: Bezier.hpp  ParametricCurve.hpp  bezier.h  bspline.h  curve.h  spline.h  types.hpp
include/splx/curve/: Bezier.hpp  ParametricCurve.hpp  PiecewiseCurve.hpp
include/splx/internal/: bezier.hpp  combinatorics.hpp
include/splx/opt/: BezierQPGenerator.hpp  BezierQPOperations.hpp  PiecewiseCurveQPGenerator.hpp  QPGenerator.hpp  QPOperations.hpp
mathematica/: bezier.nb
src/: bspline.cpp  spline.cpp
test/: BezierQPGenerator.cpp  BezierQPGeneratorTest.cpp  BezierTest.cpp  CMakeLists.txt  PiecewiseCurveQPGeneratorTest.cpp  PiecewiseCurveTest.cpp  Tests.cmake  bezier_tests.cpp  bspline_tests.cpp  catch_bezier.cpp  curve_tests.cpp  main.cpp  spline_tests.cpp  testbezier.cpp  testbspline.cpp  testspline.cpp
test/vis/: draw_spline.py  res
